--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,14 @@
   "root": true,
   "ignorePatterns": ["projects/**/*"],
   "extends": ["plugin:prettier/recommended"],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
   "overrides": [
     {
       "files": ["*.ts"],
