--- a/package.json
+++ b/package.json
@@ -46,7 +46,17 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "~4.7.2"
+  },
+  "lint-staged": {
+    "*.{css,scss}": [
+      "npm run format"
+    ],
+    "*.{html,ts}": [
+      "eslint",
+      "npm run format"
+    ]
   }
 }
