--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,9 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
       }
     },
     {
