task-17 - added api service for fetching random photos

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
           }
         ],
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error"]
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/explicit-function-return-type": "warn"
       }
     },
     {
