--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "ng lint",
     "format": "prettier --write .",
     "prepare": "husky install",
-    "lint-staged": "npx lint-staged"
+    "lint-staged": "npx lint-staged",
+    "deploy": "sls deploy && npm run build && sls client deploy --no-config-change --no-policy-change --no-cors-change \"--no-confirm\" && sls invalidateCloudFrontCache"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,9 @@
     "karma-coverage": "~2.2.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "serverless": "^3.21.0",
+    "serverless-finch": "^4.0.0",
+    "serverless-single-page-app-plugin": "file:serverless-single-page-app-plugin",
     "typescript": "~4.7.2"
   },
   "lint-staged": {
